--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <a href="#">Video</a>
                     <a href="#">Audio</a>
                     <a href="#">Web</a>
+					<a href="#">File</a>
                 </div>
             </div>
         </div>
